--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.2.0",
     "react-phone-number-input": "^3.4.13",
+    "react-to-print": "^3.2.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
